--- a/.gitignore
+++ b/.gitignore
@@ -69,3 +69,34 @@ hs_err_pid*
 # IntelliJ
 .idea
 *.iml
+
+# OS files
+.DS_Store
+
+### Python files
+
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+*$py.class
+
+# C extensions
+*.so
+
+# Distribution / packaging
+.Python
+env/
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+*.egg-info/
+.installed.cfg
+*.egg
